--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.7",
     "@mui/material": "^6.4.7",
+    "@mui/x-date-pickers": "^7.27.3",
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
     "cra-template-redux": "2.0.0",
+    "date-fns": "^2.29.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
