--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,9 @@
     "@reduxjs/toolkit": "^2.6.1",
     "axios": "^1.8.3",
     "cra-template-redux": "2.0.0",
-    "date-fns": "^2.29.3",
+    "date-fns": "^2.30.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
