--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-scripts": "^5.0.1",
+    "recharts": "^2.15.3",
     "redux-persist": "^6.0.0",
     "web-vitals": "^4.2.4"
   },
