--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
     "axios": "^1.8.3",
     "cra-template-redux": "2.0.0",
     "date-fns": "^2.30.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-dom": "^18.3.1",
